tests/src/frontend/syntax/invalid/missing_bar_in_match_branch.sk
fun main(): String {
  i = 42;
  i match {
  | 0 -> i j
  | 1 -> "Fail"
  }
}
